force-app/main/default/objects/Jet__c/Jet__c.object-meta.xml
<CustomObject>
    <description>A jet is an aircraft for transporting passengers</description>
    <label>Jet</label>
    <nameField>
        <displayFormat>J-{0000}</displayFormat>
        <label>JetID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>