force-app/main/default/objects/Jet__c/fields/Jet_Weight__c.field-meta.xml
<CustomField>
    <fullName>Jet_Weight__c</fullName>
    <label>Jet Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>