force-app/main/default/objects/Jet__c/fields/Max_Speed__c.field-meta.xml
<CustomField>
    <fullName>Max_Speed__c</fullName>
    <label>Max Speed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>