force-app/main/default/objects/Jet__c/fields/Miles_Till_Next_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Miles_Till_Next_Inspection__c</fullName>
    <formula>IF(ROUND( Current_Milage__c ,-3)&gt; Current_Milage__c ,ROUND( Current_Milage__c ,-3),ROUND( Current_Milage__c ,-3)+1000)- Current_Milage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Miles Till Next Inspection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>