force-app/main/default/objects/Jet__c/fields/Min_Amount_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount_of_Hours__c</fullName>
    <description>Minimum amount of hours required to fly this jet</description>
    <label>Min Amount of Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>