force-app/main/default/objects/Jet__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <label>Model Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>