force-app/main/default/objects/Jet__c/fields/Next_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Next_Inspection__c</fullName>
    <label>Next Inspection</label>
    <type>DateTime</type>
</CustomField>