force-app/main/default/objects/Jet__c/fields/Recovery_date__c.field-meta.xml
<CustomField>
    <fullName>Recovery_date__c</fullName>
    <description>A date when this record was undeleted</description>
    <label>Recovery date</label>
    <type>Date</type>
</CustomField>