force-app/main/default/objects/Jet__c/fields/Total_Flown_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Flown_Hours__c</fullName>
    <label>Total Flown Hours</label>
    <summarizedField>Jet_Booking__c.Flight_Duration__c</summarizedField>
    <summaryForeignKey>Jet_Booking__c.Jet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>