force-app/main/default/objects/Jet__c/recordTypes/Commerce_Jet.recordType-meta.xml
<RecordType>
    <fullName>Commerce_Jet</fullName>
    <active>true</active>
    <label>Commerce Jet</label>
</RecordType>