force-app/main/default/objects/Jet__c/recordTypes/Private_Jet.recordType-meta.xml
<RecordType>
    <fullName>Private_Jet</fullName>
    <active>true</active>
    <label>Private Jet</label>
</RecordType>