force-app/main/default/objects/Jet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Airport__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <columns>Total_Flown_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>